Spec & gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-## Documentation (Latex stuff)
-/documentation/**.aux
-/documentation/**.log
-/documentation/**.gz
-/documentation/**.pdf ## Valszeg nem kell a generált pdf ha ott van a .tex
+*.aux
+*.log
+*.gz
